...
                    modifier = Modifier
                        .align(Alignment.CenterVertically)
                        .padding(5.dp),
                )
            }

            Icon(icon, contentDescription = "Bet placing dropdown icon",
                modifier = Modifier
                    .clickable {
                        if (isBetDropdownExpanded || isTrumpDropdownExpanded) {
                            isBetDropdownExpanded = false
                            isTrumpDropdownExpanded = false
                        } else {
...
                    .align(Alignment.CenterVertically)
                    .padding(5.dp)
            ) {
                val actions = bettingState.availableActions()
                if (actions.contains(Bet.BetAction.BET)) {
                    if (bettingState.jassType == JassType.SIDI_BARRANI)
                        Text(text = "Place Bet")
                    else
                        Text(text = "Start Game")
                }
            }
        }

        if (bettingState.jassType == JassType.SIDI_BARRANI || bettingState.availableActions().contains(Bet.BetAction.PASS)) {
            Button(
...
