...
                        Button(
                            onClick = {
                                onDouble(lastBet)
                            },
                            modifier = Modifier.align(Alignment.CenterHorizontally)
                        ) {
                            Text(text = "Double")
                        }
                    }
                }
            }
        }
    }
...
